# fablab

./: .env.example  Cargo.toml  Dockerfile
.github/workflows/: build-push.yml
migrations/: 001_create_db.sql  002_material_spool_weight.sql
src/: app.rs  main.rs
src/application/: errors.rs  mod.rs  validation.rs
src/application/dtos/: caller.rs  mod.rs  order_filter.rs  order_input.rs  order_output.rs  order_sort.rs
src/application/use_cases/: admin_login.rs  get_order.rs  get_user_phone.rs  list_materials.rs  list_orders.rs  manage_material.rs  mod.rs  notify_order.rs  order_files.rs  submit_order.rs  update_order.rs  update_phone.rs
src/domain/: errors.rs  material.rs  mod.rs  notifications.rs  order.rs  order_file.rs  repositories.rs  stock.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: argon2.rs
src/infrastructure/cas/: client.rs  parser.rs
src/infrastructure/db/: admin_repo.rs  material_repo.rs  migrations.rs  mod.rs  order_file_repo.rs  order_repo.rs  pool.rs  session_store.rs  user_repo.rs
src/infrastructure/email/: config.rs  mod.rs  smtp_sender.rs
src/infrastructure/storage/: local_fs.rs  mod.rs  upload.rs
src/interface/: admin_guard.rs  csrf.rs  error_messages.rs  file_handlers.rs  flash.rs  mod.rs  routes.rs  security_headers.rs  session_helpers.rs
src/interface/components/: csrf_field.rs  flash_message.rs  mod.rs  nav.rs  order_table.rs  status_badge.rs
src/interface/pages/: admin_dashboard.rs  admin_login.rs  admin_materials.rs  home.rs  (+5 more)
style/: main.css
tests/: db_tests.rs  domain_tests.rs  use_case_tests.rs
