[package]
name = "fablab"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
reqwest = { version = "0.13", features = ["blocking"] }
quick-xml = "0.39"
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std"] }
dotenvy = "0.15"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.15"
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }
getrandom = "0.4"
urlencoding = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
uuid = { version = "1", features = ["v4"] }
multer = "3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
